syntax = "proto3";
package migration;

import "google/protobuf/timestamp.proto";

service Migration {
  rpc health_check(Empty) returns (HealthCheckResponse) {}
  rpc pause(PauseRequest) returns (PauseResponse) {}
  rpc resume(Empty) returns (ResumeResponse) {}
  rpc migrate(Empty) returns (MigrateResponse) {}
  rpc unmigrate(Empty) returns (UnmigrateResponse) {}
}

message Empty {} // for all null requests

message HealthCheckResponse {
  enum Status {
    HEALTHY = 0;
    UNKNOWN = 1;
  }

  Status status = 1;
}

message PauseRequest {
  int32 timeout = 1;
  int32 expiry = 2;
}

message PauseResponse {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message ResumeResponse {
  google.protobuf.Timestamp created_at = 1;
}

message MigrateResponse {
  string migrating_to = 1;
  google.protobuf.Timestamp created_at = 2;
}

message UnmigrateResponse {
  google.protobuf.Timestamp created_at = 1;
}
